--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.12",
-    "bootstrap": "^5.3.2",
+    "@auth0/angular-jwt": "^5.2.0",
     "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.2",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
