--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:dig_bank_frontend": "node dist/dig_bank_frontend/server/server.mjs"
+    "serve:ssr:dig_bank_frontend": "node dist/dig_bank_frontend/server/server.mjs",
+    "build:prod:copy": "ng build --configuration production && cp -r dist/dig_bank_frontend/* ../dig_bank/src/main/resources/static/"
   },
   "private": true,
   "dependencies": {
@@ -22,7 +23,9 @@
     "@angular/ssr": "^19.2.12",
     "@auth0/angular-jwt": "^5.2.0",
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.3.6",
+    "bootstrap-icons": "^1.13.1",
+    "chart.js": "^4.4.9",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
